external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_value.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_value.move:3:13
  │
3 │         5u64();
  │             ^
  │             │
  │             Unexpected '('
  │             Expected ';'

error[EC01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_value.move:4:13
  │
4 │         5u64(0, 1);
  │             ^
  │             │
  │             Unexpected '('
  │             Expected ';'
