external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_value.move
module 0x42::M {
    fun foo() {
        5u64();
        5u64(0, 1);
    }
}
